--- a/src/MinhasFinancas.Infra.Data/MinhasFinancas.Infra.Data.csproj
+++ b/src/MinhasFinancas.Infra.Data/MinhasFinancas.Infra.Data.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MinhasFinancas.Domain\MinhasFinancas.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.151" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.10" />
+  </ItemGroup>
+
 </Project>
