adicionado telas de listage, add e edit

--- a/src/MinhasFinancas.App/MinhasFinancas.App.csproj
+++ b/src/MinhasFinancas.App/MinhasFinancas.App.csproj
@@ -59,4 +59,16 @@
 	  <ProjectReference Include="..\MinhasFinancas.Infra.Database\MinhasFinancas.Infra.Database.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <MauiXaml Update="Views\TransacaoAdd.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\TransacaoEdit.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\TransacaoLista.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	</ItemGroup>
+
 </Project>
