--- a/src/MinhasFinancas.Infra.Database/MinhasFinancas.Infra.Database.csproj
+++ b/src/MinhasFinancas.Infra.Database/MinhasFinancas.Infra.Database.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <None Remove=".env" />
+    <None Remove=".env_local" />
   </ItemGroup>
 
   <ItemGroup>
@@ -26,9 +27,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update=".env_local">
+    <EditorConfigFiles Include=".env_local">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+    </EditorConfigFiles>
   </ItemGroup>
 
 </Project>
