--- a/src/MinhasFinancas.App/MinhasFinancas.App.csproj
+++ b/src/MinhasFinancas.App/MinhasFinancas.App.csproj
@@ -70,4 +70,6 @@
 	  </MauiXaml>
 	</ItemGroup>
 
+	<ProjectExtensions><VisualStudio><UserProperties XamarinHotReloadDebuggerTimeoutExceptionMinhasFinancasAppHideInfoBar="True" XamarinHotReloadGenericExceptionInfoBarMinhasFinancasAppHideInfoBar="True" /></VisualStudio></ProjectExtensions>
+
 </Project>
